grammar.js
        source_file: $ => repeat($._statement),

        _statement: $ =>
            seq(
                choice(
                    $.alter_keyspace,
                    $.alter_materialized_view,
                    $.alter_role,
                    $.alter_table,
                    $.alter_type,
                    $.alter_user,
                    $.apply_batch,
                    $.create_aggregate,
                    $.create_function,
                    $.create_index,
                    $.create_keyspace,
                    $.create_materialized_view,
                    $.create_role,
                    $.create_table,
                    $.create_trigger,
                    $.create_type,
                    $.create_user,
                    $.delete_statement,
                    $.drop_aggregate,
                    $.drop_function,
                    $.drop_index,
                    $.drop_keyspace,
                    $.drop_materialized_view,
                    $.drop_role,
                    $.drop_table,
                    $.drop_trigger,
                    $.drop_type,
                    $.drop_user,
                    $.grant,
                    $.insert_statement,
                    $.list_permissions,
                    $.list_roles,
                    $.revoke,
                    $.select_statement,
                    $.truncate,
                    $.update,
                    $.use,
                ),
                optional(";"),
            ),

        constant: $ =>
            choice(
                $.decimal_literal,
                $.float_literal,
                $.hexadecimal_literal,
                $.boolean_literal,
                $.code_block,
                kw("NULL"),
                $._string_literal,
                $.uuid,
            ),
        _string_literal: $ => token(string_str),
        begin_batch : $ =>
            seq(
                kw("BEGIN"),
                optional( choice( kw("LOGGED"), kw("UNLOGGED"))),
                kw( "BATCH"),
                optional( $.using_timestamp_spec),
            ),
        using_timestamp_spec : $ => seq( kw("USING"), $.timestamp ),
        timestamp : $ => seq( kw("TIMESTAMP"), $.decimal_literal),
        insert_statement : $ =>
            seq(
                optional( $.begin_batch),
                kw("INSERT"),
                kw("INTO"),
                dotted_name( $.object_name, $.object_name, "table"),
                optional( $.insert_column_spec ),
                $.insert_values_spec,
                optional( if_not_exists ),
                optional( $.using_ttl_timestamp )
            ),
        insert_column_spec : $ => seq( "(", $.column_list, ")" ),
        column_list : $ => commaSep1( alias( $.object_name, "column")),
        insert_values_spec : $ =>
            choice(
                seq( kw("VALUES"), "(", $.expression_list, ")", ),
                seq( kw("JSON"), $.constant),
            ),
        expression_list : $ => commaSep1( $.expression ),
        expression : $ =>
            choice(
                $.constant,
                $.assignment_map,
                $.assignment_set,
                $.assignment_list,
                $.assignment_tuple,
            ),
        using_ttl_timestamp : $ =>
            seq(
                kw( "USING"),
                choice(
                    seq( $.ttl, optional( seq(kw("AND"), $.timestamp))),
                    seq( $.timestamp, optional( seq(kw("AND"), $.ttl))),
                )
            ),
        table_name : $ => dotted_name( $.object_name, $.object_name, "table"),
        grant : $ =>
            seq(
                seq( kw("GRANT"), $.priviledge,),
                seq( kw("ON"), $.resource, ),
                seq( kw("TO"), field( "role", $.object_name) ),
            ),
        priviledge : $ =>
            choice(
                seq( kw( "ALL"), optional( kw("PERMISSIONS"))),
                kw( "ALTER"),
                kw( "AUTHORIZE"),
                kw( "DESCRIBE"),
                kw( "EXECUTE"),
                kw( "CREATE"),
                kw( "DROP"),
                kw( "MODIFY"),
                kw( "SELECT"),
            ),
        resource : $ =>
            choice(
                seq( kw( "ALL"),
                    choice(
                        seq(
                            kw("FUNCTIONS"),
                            optional( seq(
                                kw("IN"),kw("KEYSPACE"), alias( $.object_name, "keyspace") )
                            ),
                        ),
                        kw("KEYSPACES"),
                        kw("ROLES"),
                    ),
                ),
                seq( kw("FUNCTION"), dotted_name( $.object_name, $.object_name, "function" )),
                seq( kw("KEYSPACE"), alias( $.object_name, "keyspace")),
                seq( kw("ROLE"), alias( $.object_name, "role") ),
                seq( optional( kw("TABLE")), dotted_name( $.object_name, $.object_name, "table")),
            ),
        list_permissions : $ =>
            seq(
                kw("LIST"),
                $.priviledge,
                optional( seq( kw("ON"), $.resource)),
                optional( seq( kw( "OF"), alias( $.object_name, "role")))
            ),
        drop_aggregate : $ =>
            seq(
                kw( "DROP"),
                kw( "AGGREGATE"),
                optional( if_exists ),
                dotted_name( $.object_name, $.object_name, "aggregate"),
            ),
        drop_role : $ =>
            seq(
                kw( "DROP"),
                kw( "ROLE"),
                optional( if_exists ),
                alias( $.object_name, "role"),
            ),
        drop_table : $ =>
            seq(
                kw( "DROP"),
                kw( "TABLE"),
                optional( if_exists ),
                dotted_name( $.object_name, $.object_name, "table"),
            ),
        drop_trigger : $ =>
            seq(
                kw( "DROP"),
                kw( "TRIGGER"),
                optional( if_exists ),
                dotted_name( $.object_name, $.object_name, "trigger"),
                kw( "ON"),
                dotted_name( $.object_name, $.object_name, "table"),
            ),

        drop_user : $ =>
            seq(
                kw( "DROP"),
                kw("USER"),
                optional( if_exists ),
                dotted_name( $.object_name, $.object_name, "user"),
            ),
        data_type : $ => seq( $.data_type_name, optional($.data_type_definition)),
        data_type_name : $ =>
            choice (
                $.object_name,
                kw( "TIMESTAMP"),
                kw( "SET"),
                kw( "ASCII"),
                kw( "BIGINT"),
                kw( "BLOB"),
                kw( "BOOLEAN"),
                kw( "COUNTER"),
                kw( "DATE"),
                kw( "DECIMAL"),
                kw( "DOUBLE"),
                kw( "FLOAT"),
                kw( "FROZEN"),
                kw( "INET"),
                kw( "INT"),
                kw( "LIST"),
                kw( "MAP"),
                kw( "SMALLINT"),
                kw( "TEXT"),
                kw( "TIME"),
                kw( "TIMEUUID"),
                kw( "TINYINT"),
                kw( "TUPLE"),
                kw( "VARCHAR"),
                kw( "VARINT"),
                kw( "TIMESTAMP"),
                kw( "UUID"),
            ),
        data_type_definition : $ => seq( "<", commaSep1( $.data_type_name), ">"),
        option_hash : $ => seq( "(", commaSep1( $.option_hash_item), ")"),
        option_hash_item : $ => seq( $._string_literal, ":", choice( $._string_literal, $.float_literal), ")"),
        create_table : $ =>
            seq(
                kw("CREATE"),
                kw("TABLE"),
                optional( if_not_exists ),
                dotted_name( $.object_name, $.object_name, "table"),
                "(",
                $.column_definition_list,
                ")",
                optional( $.with_element),
            ),
        column_definition_list : $ =>
            seq(
                commaSep1( $.column_definition),
                optional( seq( ",", $.primary_key_element)),
            ),
        column_definition : $ => seq( alias($.object_name, "column"), $.data_type, optional( $.primary_key_column)),
        primary_key_element : $ =>
            seq(
                kw("PRIMARY"),
                kw("KEY"),
                "(",
                $.primary_key_definition,
                ")",
            ),
        primary_key_definition : $ => choice( alias($.object_name, "primary_key"), $.compound_key, $.composite_key ),
        compound_key : $ => seq( alias( $.object_name,"partition_key"), ",", $.clustering_key_list ),
        clustering_key_list : $ => alias( commaSep1( $.object_name ), "clustering_key"),
        with_element : $ => seq( kw("WITH"), optional( $.table_options), optional( $.clustering_order)),
        table_options : $ => prec.left(PREC.and,sep1( $.table_option_item, kw("AND"))),
        table_option_item : $ =>
            choice(
                seq( $.table_option_name, "=", $.table_option_value ),
                seq( $.table_option_name, "=", $.option_hash ),
            ),
        table_option_name : $ => alias( $.object_name, "option"),
        table_option_value : $ => choice( $._string_literal, $.float_literal ),
        clustering_order : $ =>
            seq(
                kw("CLUSTERING"),
                kw( "ORDER"),
                kw( "BY"),
                "(",
                alias( $.object_name, "column" ),
                optional( $.order_direction ),
                ")",
            ),
        trigger_name : $ => dotted_name( $.object_name, $.object_name, "trigger"),
        create_type : $ =>
            seq(
                kw("CREATE"),
                kw("TYPE"),
                optional( if_not_exists ),
                dotted_name( $.object_name, $.object_name, "type"),
                "(",
                commaSep1( seq( alias( $.object_name, "column"), alias( $.data_type, "data_type")) ),
                ")",
            ),
        create_user : $ =>
            seq(
                kw("CREATE"),
                kw("USER"),
                optional( if_not_exists ),
                alias( $.object_name, "user"),
                kw( "WITH"),
                $.user_password,
                optional( $.user_super_user),
            ),
        user_password : $ => seq( kw("PASSWORD"), $._string_literal),
        object_name : $ => token( choice( name_chars, seq(squote, name_chars, squote))),
    },
});

function kw(keyword) {
    if (keyword.toUpperCase() != keyword) {
        throw new Error(`Expected upper case keyword got ${keyword}`);
    }
    const words = keyword.split(" ");
    const regExps = words.map(createCaseInsensitiveRegex);

    if (regExps.length == 1) {
        return alias(regExps[0], keyword);
    } else {
        return alias(seq(...regExps), keyword.replace(/ /g, "_"));
    }
}

function createCaseInsensitiveRegex(word) {
    return new RegExp(
        word
            .split("")
            .map(letter => `[${letter.toLowerCase()}${letter.toUpperCase()}]`)
            .join(""),
    );
}

function commaSep1(rule) {
    return sep1(rule, ",");
}

function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}

function dotted_name(rule1, rule2, name) {
    return choice(
        seq( alias( rule1, "keyspace"),
            ".", alias(rule2, name)),
        alias( rule2, name ),
    )
}
