test/corpus/createUser.cql
================================================================================
CREATE USER newuser WITH PASSWORD 'password';
================================================================================
CREATE USER newuser WITH PASSWORD 'password';
--------------------------------------------------------------------------------
(source_file
    (create_user
    (user
    (object_name))
    (user_password
    (string_literal))))
