test/corpus/dropRole.cql
================================================================================
DROP ROLE team_manager;
================================================================================
DROP ROLE team_manager;
--------------------------------------------------------------------------------
(source_file
    (drop_role
    (role
    (object_name))))

================================================================================
DROP ROLE IF EXISTS team_manager;
================================================================================
DROP ROLE IF EXISTS team_manager;
--------------------------------------------------------------------------------
