test/corpus/dropTable.cql
================================================================================
DROP TABLE table;
================================================================================
DROP TABLE table;
--------------------------------------------------------------------------------

(source_file
  (drop_table
    (table_name)))

================================================================================
DROP TABLE keyspace.table
================================================================================
DROP TABLE keyspace.table
--------------------------------------------------------------------------------

(source_file
  (drop_table
    (table_name)))

================================================================================
DROP TABLE IF EXISTS table;
================================================================================
DROP TABLE IF EXISTS table;
--------------------------------------------------------------------------------

(source_file
  (drop_table
    (table_name)))

================================================================================
DROP TABLE IF EXISTS keyspace.table
================================================================================
DROP TABLE IF EXISTS keyspace.table
--------------------------------------------------------------------------------

(source_file
  (drop_table
    (table_name)))
