test/corpus/dropTrigger.cql
================================================================================
DROP TRIGGER trigger_name ON table_name;
================================================================================
DROP TRIGGER trigger_name ON table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER trigger_name ON ks.table_name;
================================================================================
DROP TRIGGER trigger_name ON ks.table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER keyspace.trigger_name ON table_name;
================================================================================
DROP TRIGGER keyspace.trigger_name ON table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER keyspace.trigger_name ON ks.table_name;
================================================================================
DROP TRIGGER keyspace.trigger_name ON ks.table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER if exists trigger_name ON table_name;
================================================================================
DROP TRIGGER if exists trigger_name ON table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER if exists trigger_name ON ks.table_name;
================================================================================
DROP TRIGGER if exists trigger_name ON ks.table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER if exists keyspace.trigger_name ON table_name;
================================================================================
DROP TRIGGER if exists keyspace.trigger_name ON table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))

================================================================================
DROP TRIGGER if exists keyspace.trigger_name ON ks.table_name;
================================================================================
DROP TRIGGER if exists keyspace.trigger_name ON ks.table_name;
--------------------------------------------------------------------------------

(source_file
  (drop_trigger
    (trigger_name)
    (table_name)))
