test/corpus/dropUser.cql
================================================================================
DROP USER boone;
================================================================================
DROP USER boone;
--------------------------------------------------------------------------------

(source_file
  (drop_user
    (user)))

================================================================================
DROP USER if exists boone;
================================================================================
DROP USER if exists boone;
--------------------------------------------------------------------------------

(source_file
  (drop_user
    (user))
  (ERROR
    (UNEXPECTED 'n')))

================================================================================
DROP USER keyspace.boone;
================================================================================
DROP USER keyspace.boone;
--------------------------------------------------------------------------------

(source_file
  (drop_user
    (keyspace)
    (user)))

================================================================================
drop user IF EXISTS keyspace.boone;
================================================================================
drop user IF EXISTS keyspace.boone;
--------------------------------------------------------------------------------

(source_file
  (drop_user
    (keyspace)
    (ERROR)
    (user)))
