test/corpus/grant.cql
================================================================================
GRANT SELECT ON ALL KEYSPACES TO coach;
================================================================================
GRANT SELECT ON ALL KEYSPACES TO coach;
--------------------------------------------------------------------------------

(source_file
  (grant
    (priviledge)
    (resource)
    (object_name)))

================================================================================
GRANT MODIFY ON KEYSPACE field TO manager;
================================================================================
GRANT MODIFY ON KEYSPACE field TO manager;
--------------------------------------------------------------------------------

(source_file
  (grant
    (priviledge)
    (resource)
    (object_name)))
================================================================================
GRANT ALTER ON KEYSPACE cycling TO coach;
================================================================================
GRANT ALTER ON KEYSPACE cycling TO coach;
--------------------------------------------------------------------------------

(source_file
  (grant
    (priviledge)
    (resource)
    (object_name)))


================================================================================
GRANT ALL PERMISSIONS ON cycling.name TO coach;
================================================================================
GRANT ALL PERMISSIONS ON cycling.name TO coach;
--------------------------------------------------------------------------------

(source_file
  (grant
    (priviledge)
    (resource)
    (object_name)))

================================================================================
GRANT ALL ON KEYSPACE cycling TO cycling_admin;
================================================================================
GRANT ALL ON KEYSPACE cycling TO cycling_admin;
--------------------------------------------------------------------------------

(source_file
  (grant
    (priviledge)
    (resource)
    (object_name)))
