test/corpus/listPermissions.cql
================================================================================
LIST ALL;
================================================================================
LIST ALL;
--------------------------------------------------------------------------------

(source_file
  (list_permissions
    (priviledge)))

================================================================================
LIST ALL OF coach;
================================================================================
LIST ALL
OF coach;
--------------------------------------------------------------------------------

(source_file
  (list_permissions
    (priviledge)))

================================================================================
LIST ALL ON cyclist.name;
================================================================================
LIST ALL
ON cyclist.name;
--------------------------------------------------------------------------------

(source_file
  (list_permissions
    (priviledge)
    (resource)))
